--- a/src/app/classified/category/category.component.html
+++ b/src/app/classified/category/category.component.html
@@ -1,3 +1,60 @@
-<p>
-  category works!
-</p>
+<mat-sidenav-container>
+
+  <mat-sidenav #sidenav mode="side" opened="true" class="example-sidenav" [fixedInViewport]="options.value.fixed" [fixedTopGap]="options.value.top"
+    [fixedBottomGap]="options.value.bottom">
+    {{options.value.fixed ? 'Fixed' : 'Non-fixed'}} Sidenav
+    <i class="material-icons">work</i>
+  </mat-sidenav>
+  <mat-sidenav-content [formGroup]="options">
+    <!-- <header style="background: #3f51b5;">
+        <div style="font-size:100px" *ngFor="let i of [1,2,34,5,6,7,8,9]">{{i}}</div>
+      </header> -->
+    <header>
+      Kategorie
+    </header>
+    <div class="container">
+      <div fxLayout="column" fxLayoutAlign="center center" style="text-align:center">
+        <div fxFlex="grow" fxFlexAlign="center">
+          <p>First Div</p>
+        </div>
+        <div fxFlex fxFlexAlign="center">
+          <p>Display Count: {{cnt}} </p>
+          <h1>Login</h1>
+          <p>{{errorMessage}} </p>
+        </div>
+      </div>
+      <div fxLayout="column" fxLayoutAlign="center center">
+        <div fxFlex="grow">
+          <button style="height:50px; width:200px" (click)="onClick()">Click for New Code</button>
+        </div>
+      </div>
+      <div fxLayout="column" fxLayoutAlign="center center">
+        <div fxFlex="grow">
+          <a href="https://play.google.com/store/apps/details?id=com.example.app" target="_blank">
+            <img src="../assets/googleplay.svg" alt="Google Play" height="100px" width="400px">
+          </a>
+        </div>
+      </div>
+      <app-classified-item>
+        
+      </app-classified-item>
+    </div>
+
+    <p>
+      <mat-checkbox formControlName="fixed">Fixed</mat-checkbox>
+    </p>
+    <p>
+      <mat-form-field>
+        <input matInput type="number" formControlName="top" placeholder="Top gap">
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field>
+        <input matInput type="number" formControlName="bottom" placeholder="Bottom gap">
+      </mat-form-field>
+    </p>
+    <p>
+      <button mat-button (click)="sidenav.toggle()">Toggle</button>
+    </p>
+  </mat-sidenav-content>
+</mat-sidenav-container>
