--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <nav  class="mat-elevation-z6" style="background: #3f51b5;">
   <div fxFlexFill class="button-wrapper">
-      <a routerLink='.' color="primary" mat-button>LOGO</a>
+      <a [routerLink]="['/classified']"  color="primary" mat-button>LOGO</a>
       <a href="" mat-button>Ogoszenia</a>
       <a href="" mat-button>Contact</a>
       <a href="" mat-button>Dodaj nowe</a>
