--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,40 +1,10 @@
 <ng-container>
   <mat-toolbar class="example-header">
     <app-header>
-
     </app-header>
   </mat-toolbar>
-
-  <mat-sidenav-container>
-   
-    <mat-sidenav #sidenav mode="side" opened="true" class="example-sidenav" [fixedInViewport]="options.value.fixed" [fixedTopGap]="options.value.top"
-      [fixedBottomGap]="options.value.bottom">
-      {{options.value.fixed ? 'Fixed' : 'Non-fixed'}} Sidenav
-    </mat-sidenav>
-
-    <mat-sidenav-content [formGroup]="options">
-        <header style="background: #3f51b5;">
-
-            <div style="font-size:100px" *ngFor="let i of [1,2,34,5,6,7,8,9]">{{i}}</div>
-          </header>
-      <p>
-        <mat-checkbox formControlName="fixed">Fixed</mat-checkbox>
-      </p>
-      <p>
-        <mat-form-field>
-          <input matInput type="number" formControlName="top" placeholder="Top gap">
-        </mat-form-field>
-      </p>
-      <p>
-        <mat-form-field>
-          <input matInput type="number" formControlName="bottom" placeholder="Bottom gap">
-        </mat-form-field>
-      </p>
-      <p>
-        <button mat-button (click)="sidenav.toggle()">Toggle</button>
-      </p>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-
+ 
+  <router-outlet>
+    </router-outlet>
   <mat-toolbar class="example-footer">Footer</mat-toolbar>
 </ng-container>
