--- a/src/app/classified/add/add.component.html
+++ b/src/app/classified/add/add.component.html
@@ -1,15 +1,19 @@
 <div class="container">
   <button mat-raised-button (click)="isLinear = true" id="toggle-linear">Enable linear mode</button>
+  <mat-horizontal-stepper [linear]="isLinear" (selectionChange)="stepChanged($event)">
+    <mat-step [stepControl]="firstFormGroup" >
 
-
-  <mat-horizontal-stepper [linear]="isLinear">
-    <mat-step [stepControl]="firstFormGroup">
+      <mat-card>
+        <mat-card-content>
+          Prosze wypelnic ponizesz pola. Pola z gwazdka sa wymagane.
+        </mat-card-content>
+      </mat-card>
       <form [formGroup]="firstFormGroup" fxLayout='column'>
         <ng-template matStepLabel>Ogloszenie</ng-template>
         <section>
           <div>
             <mat-form-field class="max-width">
-              <mat-select placeholder="Kategoria" formControlName="category" name="category">
+              <mat-select placeholder="Kategoria" formControlName="category" name="category" required>
                 <mat-option *ngFor="let category of categoryList" [value]="category.id">
                   {{category.text}}
                 </mat-option>
@@ -23,159 +27,78 @@
           </div>
           <div>
             <mat-form-field class="max-width">
-              <textarea matInput placeholder="Tresc" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"></textarea>
+              <!-- <textarea matInput placeholder="Tresc" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"></textarea> -->
+              <textarea matInput placeholder="Tresc" formControlName="firstCtrl" required></textarea>
             </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field class="max-width">
+              <input matInput placeholder="Number tel" formControlName="phoneNumber">
+            </mat-form-field>
+            <mat-error *ngIf="firstFormGroup.get('phoneNumber').hasError('minlength')">
+              Please enter a valid email address
+            </mat-error>
+          </div>
+          <div>
+            <mat-form-field class="max-width">
+              <input matInput placeholder="Email" formControlName="email">
+            </mat-form-field>
+            <mat-error *ngIf="firstFormGroup.get('email').hasError('email') && firstFormGroup.get('email').value.length > 0">
+              Please enter a valid email address
+            </mat-error>
           </div>
           <h3>Select files</h3>
-
-          <!-- <div ng2FileDrop
-               [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
-               (fileOver)="fileOverBase($event)"
-               [uploader]="uploader"
-               class="well my-drop-zone">
-              Base drop zone
-          </div>
-
-          <div ng2FileDrop
-               [ngClass]="{'another-file-over-class': hasAnotherDropZoneOver}"
-               (fileOver)="fileOverAnother($event)"
-               [uploader]="uploader"
-               class="well my-drop-zone">
-              Another drop zone
-          </div> -->
-          <mat-form-field >
-            <app-input-file formControlName="requiredfile" placeholder="Required input" valuePlaceholder="No file selected" required></app-input-file>
+          <mat-form-field class="max-width">
+            <app-input-file #fileUpload formControlName="files" multiple="true" placeholder="Prosze wybrac zdjecia" ></app-input-file>
             <mat-icon matSuffix>folder</mat-icon>
-            <mat-error *ngIf="firstFormGroup.get('requiredfile').hasError('required')">
+            <mat-error *ngIf="firstFormGroup.get('files').hasError('required')">
               Please select a file
             </mat-error>
-            <mat-error *ngIf="firstFormGroup.get('requiredfile').hasError('maxContentSize')">
-              The total size must not exceed {{firstFormGroup.get('requiredfile')?.getError('maxContentSize').maxSize | byteFormat}}
-              ({{firstFormGroup.get('requiredfile')?.getError('maxContentSize').actualSize | byteFormat}}).
+            <mat-error *ngIf="firstFormGroup.get('files').hasError('maxContentSize')">
+              The total size must not exceed {{firstFormGroup.get('requiredfile')?.getError('maxContentSize').maxSize | byteFormat}} ({{firstFormGroup.get('requiredfile')?.getError('maxContentSize').actualSize
+              | byteFormat}}).
             </mat-error>
           </mat-form-field>
-          Multiple
-
-          <button type="button" md-button (click)="imgFileInput.click()">Add a photo</button>
-          <input hidden type="file" #imgFileInput (change)="previewImage($event)"/>
-          <input type="file" ng2FileSelect [uploader]="uploader" multiple />
-          <br/> Single
-          <input type="file" ng2FileSelect [uploader]="uploader" />
-        
-        </section>
-        <!-- <div class="col-md-9" style="margin-bottom: 40px">
- 
-          <h3>Upload queue</h3>
-          <p>Queue length: {{ uploader?.queue?.length }}</p>
-
-          <table class="table">
-              <thead>
-              <tr>
-                  <th width="50%">Name</th>
-                  <th>Size</th>
-                  <th>Progress</th>
-                  <th>Status</th>
-                  <th>Actions</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr *ngFor="let item of uploader.queue">
-                  <td><strong>{{ item?.file?.name }}</strong></td>
-                  <td *ngIf="uploader.isHTML5" nowrap>{{ item?.file?.size/1024/1024 | number:'.2' }} MB</td>
-                  <td *ngIf="uploader.isHTML5">
-                      <div class="progress" style="margin-bottom: 0;">
-                          <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': item.progress + '%' }"></div>
-                      </div>
-                  </td>
-                  <td class="text-center">
-                      <span *ngIf="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
-                      <span *ngIf="item.isCancel"><i class="glyphicon glyphicon-ban-circle"></i></span>
-                      <span *ngIf="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
-                  </td>
-                  <td nowrap>
-                      <button type="button" class="btn btn-success btn-xs"
-                              (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                          <span class="glyphicon glyphicon-upload"></span> Upload
-                      </button>
-                      <button type="button" class="btn btn-warning btn-xs"
-                              (click)="item.cancel()" [disabled]="!item.isUploading">
-                          <span class="glyphicon glyphicon-ban-circle"></span> Cancel
-                      </button>
-                      <button type="button" class="btn btn-danger btn-xs"
-                              (click)="item.remove()">
-                          <span class="glyphicon glyphicon-trash"></span> Remove
-                      </button>
-                  </td>
-              </tr>
-              </tbody>
-          </table>
-          <div>
-              <div>
-                  Queue progress:
-                  <div class="progress" style="">
-                      <div class="progress-bar" role="progressbar" [ngStyle]="{ 'width': uploader.progress + '%' }"></div>
-                  </div>
-              </div>
-              <button type="button" class="btn btn-success btn-s"
-                      (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
-                  <span class="glyphicon glyphicon-upload"></span> Upload all
-              </button>
-              <button type="button" class="btn btn-warning btn-s"
-                      (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
-                  <span class="glyphicon glyphicon-ban-circle"></span> Cancel all
-              </button>
-              <button type="button" class="btn btn-danger btn-s"
-                      (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
-                  <span class="glyphicon glyphicon-trash"></span> Remove all
-              </button>
-          </div>
-      </div> -->
-        <section *ngIf="firstFormGroup.controls.category.value === 1">
-          <div>
-            <mat-form-field>
-              <input matInput placeholder="Tytul" formControlName="firstCtrl" required>
-            </mat-form-field>
-          </div>
-          <div>
-            <mat-form-field fxFlex="33">
-              <textarea matInput placeholder="Tresc" formControlName="firstCtrl" required></textarea>
-              <!-- <input matInput placeholder="Tresc" formControlName="firstCtrl" required> -->
-            </mat-form-field>
-          </div>
-          <div>
-            <mat-form-field fxFlex="33">
-              <input matInput placeholder="Number telefonu" formControlName="firstCtrl" required>
-            </mat-form-field>
-          </div>
-          <div>
-            <mat-form-field fxFlex="33">
-              <input matInput placeholder="Email" formControlName="email" required>
-            </mat-form-field>
-          </div>
         </section>
         <div>
-          <button mat-button matStepperNext>Next</button>
+          <button mat-raised-button color="primary" matStepperNext>Dalej ></button>
         </div>
       </form>
     </mat-step>
     <mat-step [stepControl]="secondFormGroup">
       <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>Uzytkowniek</ng-template>
+        <ng-template matStepLabel>Podglad</ng-template>
         <mat-form-field>
           <input matInput placeholder="Address" formControlName="secondCtrl" required>
         </mat-form-field>
         <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
+          <button mat-raised-button matStepperPrevious>Wroc</button>
+          <button mat-raised-button color="primary" matStepperNext>Dalej ></button>
         </div>
       </form>
     </mat-step>
-    <mat-step>
+    <!-- <mat-step>
       <ng-template matStepLabel>Werfikacja</ng-template>
-      You are now done.
+      <mat-card>
+        Email zostanie wyslany na podany address w celu weryfikacji. Prosze klinac link w emailu. Ogloszenie nie bedzie o publikowane
+        do czasu wefikacji adresu email
+
+        <small>Prosze sprawdzic skrzynke "Spam" w razie dlugiego oczekiwania na email.</small>
+      </mat-card>
+      <form [formGroup]="verficationFormGroup" fxLayout='column'>
+        <mat-form-field class="max-width">
+          <input matInput placeholder="Imie" formControlName="firstName" required>
+        </mat-form-field>
+        <mat-form-field class="max-width">
+          <input matInput placeholder="Nazwisko" formControlName="lastName" required>
+        </mat-form-field>
+        <mat-form-field class="max-width">
+          <input matInput placeholder="Email" formControlName="email" required>
+        </mat-form-field>
+      </form>
       <div>
-        <button mat-button matStepperPrevious>Back</button>
+        <button mat-raised-button color="primary">Zapisz</button>
       </div>
-    </mat-step>
+    </mat-step> -->
   </mat-horizontal-stepper>
 </div>
