--- a/src/app/shared/upload-file/upload-file.component.html
+++ b/src/app/shared/upload-file/upload-file.component.html
@@ -1,8 +1,16 @@
-<div (click)="onClick()">
-  <input ng2FileSelect [uploader]="uploader"  #input id="md-input-file" type="file" [attr.multiple]="multiple? '' : null">
-  <span class="filename">{{fileNames}}</span>
-</div>
-<div [hidden]="uploader.queue.length ===0">
+<mat-form-field class="max-width">
+  <app-input-file formControlName="requiredfile" placeholder="Required input" valuePlaceholder="No file selected" required></app-input-file>
+  <mat-icon matSuffix>folder</mat-icon>
+  <mat-error *ngIf="firstFormGroup.get('requiredfile').hasError('required')">
+    Please select a file
+  </mat-error>
+  <mat-error *ngIf="firstFormGroup.get('requiredfile').hasError('maxContentSize')">
+    The total size must not exceed {{firstFormGroup.get('requiredfile')?.getError('maxContentSize').maxSize | byteFormat}}
+    ({{firstFormGroup.get('requiredfile')?.getError('maxContentSize').actualSize | byteFormat}}).
+  </mat-error>
+</mat-form-field>
+
+<div>
   <table>
     <thead>
       <tr>
